Javadoc added